# wfm-helper

./: LICENSE  README.md
wfm-ext/: manifest.json
wfm-ext/data/: components.json
wfm-ext/scripts/: content.js
wfm-ntfy/: config.py  main.py  pyproject.toml  requirements.txt  run.py
wfm-ntfy/blueprints/: items.py  websocket.py
wfm-ntfy/migrations/: 0.py
wfm-ntfy/models/: item.py
wfm-ntfy/templates/: index.html
wfm-ntfy/utils/: user_agent.py  wfm.py
