[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wfm-ntfy"
version = "1.0.0"
description = "Sends notifications for new warframe.market sell orders"
authors = [{ name = "Eduard" }]
requires-python = ">=3.13"
dependencies = [
    "quart==0.20.0",
    "quart-db==0.12.0",
    "websockets==14.1",
    "aiofiles==24.1.0",
    "aiohttp==3.11.11",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint.isort]
combine-as-imports = true


[tool.ruff.format]
line-ending = "lf"
quote-style = "single"
